--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,8 +2,6 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 
-[x-cloak] {
-    display: none !important;
-}
+[x-cloak] { display: none !important; }
 
 
